--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "confidence-vote-final",
+  "name": "confidence-vote",
   "version": "1.0.0",
   "scripts": {
     "dev": "vite",
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@supabase/supabase-js": "^2.39.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -14,6 +15,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^4.0.0"
+    "vite": "^4.5.0"
   }
 }
